<resources>
    <string name="app_name">THE PROJECT</string>
    <string name="edittext_hint"><font size="12">   Username/Email</font></string>
    <string name="edittext_hint1"><font size="12">    Password</font></string>
    <string name="hintText"><font size="12">Enter Name</font></string>
    <string name="hintText1"><font size="12">Enter Email</font></string>
    <string name="hintText2"><font size="12">Enter Password</font></string>
    <string name="hintText3"><font size="12">Enter Confirm Password</font></string>
    <string name="hintText4"><font size="12">Enter Address</font></string>
    <string name="hintText5"><font size="12">Enter Mobile Number</font></string>
    <string name="edittext_register"><font size="12">Register</font></string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light">
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
        <item name="isLightTheme">true</item>
        <item name="android:windowFullscreen">true</item>
    </style>

    <string name="ent">Entrepreneur</string>
    <string name="inv">Investor</string>
    <string name="title_place_holder">title_place_holder</string>
    <string name="count">4</string>
    <string name="cover">cover</string>
    <string name="todo">TODO</string>
    <string name="demo"><font size="15">As designers, we are frequently and incorrectly reminded that our job is to “make things pretty.” We are indeed designers — not artists — and there is no place for formalism in good design. Web design has a function, and that function is to communicate the message for which the Web page was conceived.
        The medium is not the message.Never is this principle more pertinent than when dealing with type, the bread and butter of Web-borne communication. A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle.
        In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all. On the contrary: well-balanced, comfortably read typography is a thing of beauty; it’s just not the arresting sort of beauty that might distract you from reading.</font></string>
    <string-array name="status_array">
        <item>Invested</item>
        <item>Partially Invested</item>
        <item>Not invested</item>
        <item>Bought</item>
    </string-array>

</resources>