<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradients">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:gravity="center"
                android:text="Signup"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:textOff="@string/ent"
                android:showText="true"
                android:textOn="@string/inv"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Name"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="297dp"
                android:layout_height="7dp"

                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintText"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintText1"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="10"
                android:hint="@string/hintText2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Confirm Password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="10"
                android:hint="@string/hintText3"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintText4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Mobile"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName81"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintText5"
                android:inputType="number" />


        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="54dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/butttons"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.879"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="189dp"
                android:layout_height="23dp"
                android:text="If you have a account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.42"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.972" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="122dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.743"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.987"
                android:onClick="sdsads"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>