<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="289dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="25dp"
    android:clickable="true"
    android:padding="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="7dp"
    android:id="@+id/card_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:src="@drawable/idea9" />
        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left"
            android:lines="2"
            android:layout_margin="2dp"
            android:padding="1dp"
            android:text="@string/title_place_holder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_count"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right"
                android:lines="1"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lickme" />
        </LinearLayout>

        </LinearLayout>
</androidx.cardview.widget.CardView>